--- a/client/views/index.html
+++ b/client/views/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
     <link rel="stylesheet" href="js/lib/bundles/ng-table.css">
     <link rel="stylesheet" href="components/sweetalert2/dist/sweetalert2.min.css">
+    <link rel="stylesheet" href=" components/ng-img-crop/compile/unminified/ng-img-crop.css">
 </head>
 
 <body ng-app="EasyGaadi" ng-cloak>
@@ -56,7 +57,7 @@
             </ul>
             <ul class="nav navbar-nav pull-right margin-top-10 user-nav" ng-show="isLoggedInn" ng-init="loggedTrue()">
 
-                <li class=""><img src="images/user.png"></li>
+                <li class=""><img src="images/profile-pics/{{profilePic}}" width="60" height="55" class="profile-pic"></li>
                 <li class="profile-nav">
                     <a href="#" class="dropdown-toggle pt-18" data-toggle="dropdown">{{displayName}}
                         <span class="caret"></span></a>
@@ -116,7 +117,10 @@
 <script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M"></script>
 <script src="components/sweetalert2/dist/sweetalert2.all.min.js"></script>
-<!--app-->
+        <script type="text/javascript" src="components/ng-file-upload/ng-file-upload.min.js"></script>
+        <script type="text/javascript" src="components/ng-file-upload/ng-file-upload-shim.min.js"></script>
+        <script type="text/javascript" src="/components/ng-img-crop/compile/unminified/ng-img-crop.js"></script>
+        <!--app-->
 <script src="js/app.js"></script>
 
 <!--services-->
