--- a/client/views/partials/userProfile/addingGroup.html
+++ b/client/views/partials/userProfile/addingGroup.html
@@ -119,3 +119,9 @@
         </div>
     </div>
 </div>
+
+    <script type="text/ng-template" id="pop-up-modal.html">
+        <div>
+            <div ng-include="template"></div>
+        </div>
+    </script>
