--- a/client/views/partials/userProfile/myProfile.html
+++ b/client/views/partials/userProfile/myProfile.html
@@ -27,29 +27,30 @@
                                            ng-model="account.profile.userName"
                                            class="form-control custom-form-control"/>
                                     <label class="focus-effect-for-input" aria-hidden="true">User Name</label>
-                                    <div class="clearfix"></div>
                                 </div>
+                                <div class="clearfix"></div>
+                            </div>
 
-                                <div class="form-group form-group-custom">
-                                    <div class="col-xs-12 styling-input-list">
-                                        <input type="text" name="mobile" id="mobile"
-                                               ng-model="account.profile.contactPhone"
-                                               class="form-control custom-form-control"/>
-                                        <label class="focus-effect-for-input" aria-hidden="true">Mobile</label>
-                                        <div class="clearfix"></div>
-                                    </div>
+                            <div class="form-group form-group-custom">
+                                <div class="col-xs-12 styling-input-list">
+                                    <input type="text" name="mobile" id="mobile"
+                                           ng-model="account.profile.contactPhone"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Mobile</label>
                                 </div>
-                                <div class="form-group form-group-custom">
-                                    <div class="col-xs-12 styling-input-list">
-                                        <input type="text" name="email" id="email" placeholder="Email"
-                                               ng-model="account.profile.email"
-                                               class="form-control custom-form-control"/>
-                                        <label class="focus-effect-for-input" aria-hidden="true">Email</label>
-                                    </div>
-                                    <div class="clearfix"></div>
+                                <div class="clearfix"></div>
+                            </div>
+
+                            <div class="form-group form-group-custom">
+                                <div class="col-xs-12 styling-input-list">
+                                    <input type="text" name="email" id="email" ng-model="account.profile.email"
+                                           class="form-control custom-form-control"/>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Email</label>
                                 </div>
+                                <div class="clearfix"></div>
                             </div>
                         </div>
+
                         <div class="col-sm-6">
                             <div class="form-group form-group-custom">
                                 <div class="col-xs-12 styling-input-list">
@@ -57,78 +58,90 @@
                                            ng-model="account.accountGroupsCount"
                                            class="form-control custom-form-control"/>
                                     <label class="focus-effect-for-input" aria-hidden="true">Total Groups</label>
-                                    <div class="clearfix"></div>
                                 </div>
+                                <div class="clearfix"></div>
                             </div>
                             <div class="form-group form-group-custom">
                                 <div class="col-xs-12 styling-input-list">
                                     <input type="text" name="totalVehicles" id="totalVehicles" readonly
                                            ng-model="account.accountTrucksCount"
                                            class="form-control custom-form-control"/>
-                                    <label class="focus-effect-for-input" aria-hidden="true">Total
-                                        Vehicles</label>
+                                    <label class="focus-effect-for-input" aria-hidden="true">Total Vehicles</label>
                                     <div class="clearfix"></div>
                                 </div>
                             </div>
                             <div class="clearfix"></div>
-                            <div class="col-xs-12 reset-pass">
-                                <h3>Reset Password</h3>
-                                <div class="col-xs-12 col-sm-6 pall-zero">
-                                    <div class="form-group form-group-custom">
-                                        <div class="col-xs-12 styling-input-list">
-                                            <input type="password" name="password" id="oldpassword"
-                                                   ng-model="account.oldPassword"
-                                                   class="form-control custom-form-control"/>
-                                            <label class="focus-effect-for-input" aria-hidden="true">Old
-                                                Password</label>
-                                            <div class="clearfix"></div>
-                                        </div>
-                                    </div>
-                                    <div class="col-xs-12 pall-zero">
-                                        <div class="col-xs-12 col-sm-6 pall-zero">
-                                            <div class="form-group form-group-custom">
-                                                <div class="col-xs-12 styling-input-list">
-                                                    <input type="password" name="retypePassword" id="Password"
-                                                           ng-model="account.newPassword"
-                                                           class="form-control custom-form-control"/>
-                                                    <label class="focus-effect-for-input" aria-hidden="true">New
-                                                        Password</label>
-                                                    <div class="clearfix"></div>
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-12 col-sm-6 pall-zero">
-                                                <div class="form-group form-group-custom">
-                                                    <div class="col-xs-12 styling-input-list">
-                                                        <input type="password" name="retypePassword"
-                                                               id="retypePassword"
-                                                               ng-model="account.confirmPassword"
-                                                               class="form-control custom-form-control"/>
-                                                        <label class="focus-effect-for-input"
-                                                               aria-hidden="true">Confirm Password</label>
-                                                        <div class="clearfix"></div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-4 col-xs-push-4">
-                                                <div class="alert alert-danger" role="alert"
-                                                     ng-show="account.errors.length">
-                                                    <ul>
-                                                        <li ng-repeat="error in account.errors">{{error}}</li>
-                                                    </ul>
-                                                    <div class="clearfix"></div>
-                                                </div>
-                                            </div>
-                                            <div class="col-xs-12 sign-in">
-                                                <button type="submit" class="sign-in-btn btn-primary btn"
-                                                        ng-click="addOrUpdateAccount()">Submit
-                                                </button>
-                                            </div>
-                                        </div>
+                        </div>
+                        <div class="col-xs-12 reset-pass">
+                            <h3>Reset Password</h3>
+                            <div class="col-xs-12 col-sm-6 pall-zero">
+                                <div class="form-group form-group-custom">
+                                    <div class="col-xs-12 styling-input-list">
+                                        <input type="password" name="password" id="oldpassword"
+                                               ng-model="account.oldPassword"
+                                               class="form-control custom-form-control"/>
+                                        <label class="focus-effect-for-input" aria-hidden="true">Old
+                                            Password</label>
 
-
+                                        <div class="clearfix"></div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-xs-12 pall-zero">
+                                <div class="col-sm-6 pall-zero">
+                                    <div class="form-group form-group-custom">
+                                        <div class="col-xs-12 styling-input-list">
+                                            <input type="password" name="retypePassword"
+                                                   id="Password" ng-model="account.newPassword"
+                                                   class="form-control custom-form-control"/>
+                                            <label class="focus-effect-for-input" aria-hidden="true">New
+                                                Password</label>
+
+                                            <div class="clearfix"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                    <div class="col-sm-6 pall-zero">
+                                        <div class="form-group form-group-custom">
+                                            <div class="col-xs-12 styling-input-list">
+                                                <input type="password" name="retypePassword"
+                                                       id="retypePassword"
+                                                       ng-model="account.confirmPassword"
+                                                       class="form-control custom-form-control"/>
+                                                <label class="focus-effect-for-input"
+                                                       aria-hidden="true">Confirm
+                                                    Password</label>
+
+                                                <div class="clearfix"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                </div>
+                                <div class="col-xs-4 col-xs-push-4">
+                                    <div class="alert alert-danger" role="alert"
+                                         ng-show="account.errors.length">
+                                        <ul>
+                                            <li ng-repeat="error in account.errors">
+                                                {{error}}
+                                            </li>
+                                        </ul>
+                                        <div class="clearfix"></div>
+                                    </div>
+                                </div>
+                                <div class="col-xs-12 sign-in">
+                                    <button type="submit"
+                                            class="sign-in-btn btn-primary btn"
+                                            ng-click="addOrUpdateAccount()">Submit
+                                    </button>
+                                </div>
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+
