--- a/client/views/partials/userProfile/myProfile.html
+++ b/client/views/partials/userProfile/myProfile.html
@@ -145,3 +145,8 @@
         </div>
     </div>
 
+<script type="text/ng-template" id="pop-up-modal.html">
+    <div>
+        <div ng-include="template"></div>
+    </div>
+</script>
