--- a/client/views/templates/revenueByVehicle.html
+++ b/client/views/templates/revenueByVehicle.html
@@ -1,5 +1,5 @@
 
-<div class="main-temp col-xs-12 mt-20" ng-init="getRevenueByVehicle();getAllTrucks();">
+<div class="main-temp col-xs-12 mt-20" ng-init="getAllTrucks();">
     <div class="col-xs-12 pall-zero db-expenses">
         <div class="col-xs-3 pall-zero"><p>Total Revenue</p></div>
         <div class="col-xs-9 pall-zero">
