--- a/client/views/templates/expenseByVehicle.html
+++ b/client/views/templates/expenseByVehicle.html
@@ -1,4 +1,4 @@
-<div class="main-temp col-xs-12 mt-20" ng-init="getExpenseByVehicle()">
+<div class="main-temp col-xs-12 mt-20" >
 
 
     <div class="col-xs-12 pall-zero db-expenses">
