--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -32,15 +32,17 @@
             <td data-title="'Expense Type'" sortable="'expenseName'" class="clickable-item col-sm-2">{{
                 maintanence.attrs.expenseName }}
             </td>
-            <td data-title="'Description'" sortable="'description'" class="clickable-item col-sm-2">{{
-                maintanence.description
-                }}
-            </td>
             <td data-title="'Amount'" sortable="'totalAmount'" class="clickable-item col-sm-1">{{
                 maintanence.totalAmount }}
+            <td data-title="'T Amount'" sortable="'cost'" class="clickable-item col-sm-1">{{
+                maintanence.cost }}
             </td>
             <td data-title="'Mode'" sortable="'mode'" class="clickable-item col-sm-1">{{
                 maintanence.mode }}
+            </td>
+            <td data-title="'Description'" sortable="'description'" class="clickable-item col-sm-2">{{
+                maintanence.description
+                }}
             </td>
             <td data-title="'Created By'" sortable="'createdByName'"
                 class="clickable-item col-sm-1">{{ maintanence.attrs.createdByName }}
