--- a/client/views/templates/expiryTrucks.html
+++ b/client/views/templates/expiryTrucks.html
@@ -38,7 +38,7 @@
         </div>
     </div>
 
-    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="paymentsParams">
+    <table class="table table-bordered table-striped table-condensed table-hover" ng-table="expiryParams">
         <tr ng-repeat="expiryList in expiryTrucks" style="text-align: center;">
             <td data-title="'Registration No'" sortable="'registrationNo'" class="clickable-item col-sm-2">
                 {{expiryList.registrationNo }}
