--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -26,7 +26,7 @@
             <td data-title="'Date'" sortable="'date'" class="clickable-item col-sm-1">{{ maintanence.date |
                 date:'yyyy-MM-dd'}}
             </td>
-            <td data-title="'V Number'" sortable="'truckName'" class="clickable-item col-sm-1">{{
+            <td data-title="'Vehicle Number'" sortable="'truckName'" class="clickable-item col-sm-1">{{
                 maintanence.attrs.truckName}}
             </td>
             <td data-title="'Expense Type'" sortable="'expenseName'" class="clickable-item col-sm-2">{{
@@ -36,8 +36,8 @@
                 maintanence.description
                 }}
             </td>
-            <td data-title="'Amount'" sortable="'cost'" class="clickable-item col-sm-1">{{
-                maintanence.cost }}
+            <td data-title="'Amount'" sortable="'totalAmount'" class="clickable-item col-sm-1">{{
+                maintanence.totalAmount }}
             </td>
             <td data-title="'Mode'" sortable="'mode'" class="clickable-item col-sm-1">{{
                 maintanence.mode }}
