--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -84,6 +84,10 @@
                                typeahead-on-select="selectPartyId($item)"
                                typeahead-select-on-exact="true"
                                typeahead-no-results="noParty" autocomplete="false" placeholder="Party Name*">
+                        <div ng-show="noParty">
+                            <i class="glyphicon glyphicon-remove red"></i>
+                            <span class="red"> No Results Found </span>
+                        </div>
                     </div>
                 </div>
                     <div class="form-group col-xs-12">
@@ -105,9 +109,8 @@
 
                 <div class="form-group col-xs-12" ng-show="expenseDetails.mode == 'Cash'">
                     <div class="col-xs-12 styling-input-list">
-                        <input ng-model="expenseDetails.cost" type="number" class="form-control custom-form-control"
-                               id="amount">
-                        <label class="focus-effect-for-input" aria-hidden="true">Amount*</label>
+                        <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.totalAmount"/>
+                        <label class="focus-effect-for-input" aria-hidden="true">Total Amount*</label>
                     </div>
                 </div>
                 <div class="form-group col-xs-12">
