--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -671,13 +671,16 @@ body {
     display: block;
     margin: 0 auto;
 }
-.payments{
+
+.payments {
     display: block;
     text-align: center;
 }
-.payments ul{
+
+.payments ul {
     margin-top: 15px !important;
 }
+
 .payments ul li {
     width: 48%;
     text-align: center;
@@ -722,10 +725,12 @@ body {
 .h3activated {
     color: #fff !important;
 }
-.liactivated{
+
+.liactivated {
     background-color: #fff;
     color: #000;
 }
+
 .costactivated {
     color: #fff !important;
 }
@@ -1410,7 +1415,9 @@ select {
     width: 100px;
 }
 
-.lisk-block ul li.map-wid, .lisk-block ul li.map-wid {width: 9%;/* margin: 0 0px 0 0; */}
+.lisk-block ul li.map-wid, .lisk-block ul li.map-wid {
+    width: 9%; /* margin: 0 0px 0 0; */
+}
 
 .activeView {
     background-color: #e83b13;
@@ -1673,74 +1680,111 @@ select {
 /*-------------GPS CSS Ends Here------------------*/
 
 /*------------Settingd Page  Starts Here----------------------*/
-.settings{
+.settings {
     display: block;
     margin: 10px 0 0 0;
 }
-.settings h3{
+
+.settings h3, .gps-settings h3 {
     font-size: 15px;
     font-weight: bold;
     padding: 10px 0;
     color: #000;
 }
-.settings ul{
+
+.settings ul {
     display: inline-block;
     padding: 0;
     margin: 0;
 }
-.settings ul li{
-    padding-left:0;
+
+.settings ul li {
+    padding-left: 0;
     padding-right: 0;
     text-align: center;
 }
-.settings ul li p{
+
+.settings ul li p {
     margin: 6px 0 0px;
 }
-.report-date{
-    width:35%;
-    float:left;
-    padding:0;
+
+.report-date {
+    width: 35%;
+    float: left;
+    padding: 0;
 }
-.set-btn{
-    width:20%;
+
+.set-btn {
+    width: 20%;
 }
-.settingsTextfield{
+
+.settingsTextfield {
     box-shadow: none;
     border-radius: 0 !important;
     padding: 6px 10px !important;
     height: 40px;
     background: transparent !important;
 }
-.set-btn .go{
+
+.set-btn .go {
     width: 66px !important;
 }
-.expired{
+
+.expired {
     background: #e83b13;
     padding: 5px;
     border-radius: 16px;
     color: #fff;
     font-weight: bold;
 }
-.expirewithin15days{
+
+.expirewithin15days {
     background: #d8af52;
     padding: 5px;
     border-radius: 16px;
     color: #fff;
     font-weight: bold;
 }
-label > input{ /* HIDE RADIO */
+
+label > input { /* HIDE RADIO */
     visibility: hidden; /* Makes input not-clickable */
     position: absolute; /* Remove input from document flow */
 }
-label > input + img{ /* IMAGE STYLES */
-    cursor:pointer;
+
+label > input + img { /* IMAGE STYLES */
+    cursor: pointer;
 
 }
-.settings ul li a label{
+
+.settings ul li a label {
     margin-bottom: 0;
 }
-label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
+
+label > input:checked + img { /* (RADIO CHECKED) IMAGE STYLES */
     background-image: url(../images/Reports_Calendar_Selected.png);
+}
+
+.gpssettings-right h3 {
+    font-size: 15px;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.gpssettings-right h3:hover {
+    text-decoration: none !important;
+}
+
+.plus-icon {
+    position: absolute;
+    right: 25px;
+    top: 10px;
+}
+
+.userEmail p {
+    font-size: 15px;
+    font-weight: bold;
+    color: #000;
+    margin: 20px 0;
 }
 
 /*------------Settingd Page ends Here----------------------*/
@@ -1750,8 +1794,9 @@ label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
     position: relative;
     z-index: 0;
 }
-.styleing-date{
-    position:relative;
+
+.styleing-date {
+    position: relative;
     z-index: 0;
 
 }
@@ -1763,7 +1808,7 @@ label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
     color: #989898;
     font-size: 15px;
     font-weight: lighter;
-
+    z-index: -99999999999;
 }
 
 .custom-form-control {
