--- a/client/views/partials/settings/gpsSettings.html
+++ b/client/views/partials/settings/gpsSettings.html
@@ -8,6 +8,85 @@
                         <li><a href="#" ui-sref="reportsSettings">Reports</a></li>
                     </ul>
                 </div>
+                <div class="clearfix"></div>
+                <div class="col-xs-12 col-sm-6  mt-20">
+                    <div class="col-xs-12 pall-zero gps-settings">
+                        <h3>GPS Settings</h3>
+                        <div class="form-group">
+                            <div class="col-xs-12 styling-input-list">
+                                <input type="text" class="form-control custom-form-control">
+                                <label class="focus-effect-for-input" aria-hidden="true">Min Stop Duration 10</label>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 pall-zero">
+                        <div class="form-group">
+                            <div class="col-xs-12 styling-input-list">
+                                <input type="text" class="form-control custom-form-control">
+                                <label class="focus-effect-for-input" aria-hidden="true">Over Speed Limit KMPH</label>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 pall-zero">
+                        <div class="form-group">
+                            <div class="col-xs-12 styling-input-list">
+                                <input type="text" class="form-control custom-form-control">
+                                <label class="focus-effect-for-input" aria-hidden="true">Route Notification
+                                    Interval</label>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                    <div class="col-xs-12 pall-zero">
+                        <div class="form-group">
+                            <div class="col-xs-12 styling-input-list">
+                                <input type="text" class="form-control custom-form-control">
+                                <label class="focus-effect-for-input" aria-hidden="true">Stop Alert Time</label>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xs-12 col-sm-6  mt-20">
+                    <div class="gpssettings-right">
+                        <uib-accordion close-others="oneAtATime">
+                            <div uib-accordion-group class="panel-default" is-open="status.open">
+                                <uib-accordion-heading>
+                                    <h3>Set Operating Routes</h3>
+                                    <i class="pull-right glyphicon plus-icon" ng-class="{'glyphicon-minus': status.open, 'glyphicon-plus': !status.open}"></i>
+                                </uib-accordion-heading>
+                                <div class="form-group">
+                                    <div class="col-xs-12 styling-input-list">
+                                        <input type="text" class="form-control custom-form-control">
+                                        <label class="focus-effect-for-input" aria-hidden="true">Min Stops Duration
+                                            10</label>
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="col-xs-12 styling-input-list">
+                                        <input type="text" class="form-control custom-form-control">
+                                        <label class="focus-effect-for-input" aria-hidden="true">Over Speed Limit
+                                            KMPH</label>
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+
+                            </div>
+                        </uib-accordion>
+                    </div>
+                    <div class="">
+                        <button class="btn can" type="reset">clear</button>
+                        <button class="btn can last" type="submit">Submit</button>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="userEmail">
+                        <p> testuser@gmail.com</p>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
