--- a/client/views/partials/party/edit-party.html
+++ b/client/views/partials/party/edit-party.html
@@ -5,7 +5,8 @@
             <div class="col-xs-12 col-sm-6">
                 <div class="form-group col-xs-12">
                     <div class="col-xs-12 styling-input-list">
-                        <input ng-model="party.name" type="text" class="form-control custom-form-control" id="accountId">
+                        <input ng-model="party.name" type="text" class="form-control custom-form-control"
+                               id="accountId">
                         <label class="focus-effect-for-input" aria-hidden="true">Party Name*</label>
 
                     </div>
@@ -61,6 +62,10 @@
 
                 </div>
 
+
+            </div>
+
+            <div class="col-xs-12 col-xs-6" ng-show="party.partyType == 'Transporter'">
                 <div class="col-xs-12 pall-zero">
                     <div class="form-group sms-email col-xs-12">
                         <div class="sms col-xs-6">
@@ -88,10 +93,6 @@
                     </div>
 
                 </div>
-
-            </div>
-
-            <div class="col-xs-12 col-xs-6">
                 <form class="mt-10">
                     <div class="col-xs-12" ng-repeat="tripLane in party.tripLanes track by $index">
 
@@ -125,11 +126,11 @@
                     </div>
 
                 </form>
+                <div class="toolbar-button-div pull-right mb-10">
+                    <button class="btn add-group mt-20" ng-click="addTripLane();">Add Trip Lanes</button>
+                </div>
+            </div>
 
-            </div>
-            <div class="toolbar-button-div pull-right mb-10">
-                <button class="btn add-group mt-20" ng-click="addTripLane();">Add Trip Lanes</button>
-            </div>
             <!--   <div class="col-xs-12 col-xs-6">
                 <div class="form-group col-xs-12">
                     <div class="col-xs-12 pos-relative">
