--- a/client/views/index.html
+++ b/client/views/index.html
@@ -4,12 +4,12 @@
     <title>Easy Gaadi</title>
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="icon" href="images/fav.png" type="image/png" sizes="32x32">
     <link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.min.css">
     <link href="components/angular-bootstrap/ui-bootstrap-csp.css" type="text/css">
     <link href="components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
+    <link rel="stylesheet" type="text/css"
+          href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css">
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css">
@@ -19,9 +19,9 @@
 </head>
 
 <body ng-app="EasyGaadi" ng-cloak>
-        <div class="loader" ng-show="reqloading">
-            <img src="images/Spinner.svg">
-        </div>
+<div class="loader" ng-show="reqloading">
+    <img src="images/Spinner.svg">
+</div>
 
 <left-nav-li name="Accounts" link="drivers"></left-nav-li>
 <span ng-controller="NavCtrl">
@@ -44,7 +44,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse col-sm-10" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav col-sm-9">
-                <li ng-class="{selected: activeTab === 'reports'}"> <a href="#" ui-sref="reports">
+                <li ng-class="{selected: subTab === 'ERP'}"> <a href="#" ui-sref="reports">
                     <img src="images/erp.png"><span>ERP</span></a></li>
                 <li ng-class="{selected: activeTab === 'gpsReports'}"><a href="#" ui-sref="gpsReports">
                     <img src="images/gps.png"><span>GPS</span></a></li>
@@ -52,20 +52,22 @@
                     <img src="images/fuelcard.png"><span>Fuel Card</span></a></li>
                 <li><a href="#">  <img src="images/tollcard.png"><span>Toll Card</span></a></li>
                 <li><a href="#">  <img src="images/load.png"><span>Loads</span></a></li>
-                <li ng-class="{selected: activeTab === 'settings'}"><a href="#" ui-sref="gpsSettings"><img src="images/settings.png"><span>Settings</span></a></li>
+                <li ng-class="{selected: activeTab === 'settings'}"><a href="#" ui-sref="gpsSettings"><img
+                        src="images/settings.png"><span>Settings</span></a></li>
                 <li><a href="#">  <img src="images/notifications.png"><span>Notifications</span></a></li>
             </ul>
             <ul class="nav navbar-nav pull-right margin-top-10 user-nav" ng-show="isLoggedInn" ng-init="loggedTrue()">
 
-                <li class=""><img src="images/profile-pics/{{profilePic}}" width="60" height="55" class="profile-pic"></li>
+                <li class=""><img src="images/profile-pics/{{profilePic}}" width="60" height="55"
+                                  class="profile-pic"></li>
                 <li class="profile-nav">
                     <a href="#" class="dropdown-toggle pt-18" data-toggle="dropdown">{{displayName}}
                         <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#" ui-sref="myProfile">My Profile</a></li>
-                         <li><a href="#"ui-sref="myGroup">My Groups</a></li>
-                         <li><a href="#" ui-sref="addGroup">Add Group</a></li>
-                         <li><a href="#" ng-click="logout()">Logout</a></li>
+                        <li><a href="#" ui-sref="myGroup">My Groups</a></li>
+                        <li><a href="#" ui-sref="addGroup">Add Group</a></li>
+                        <li><a href="#" ng-click="logout()">Logout</a></li>
 
                     </ul>
                 </li>
@@ -77,13 +79,13 @@
 </nav>
     <div class="clearfix"></div>
     <!--<top-navigation ng-if="isLoggedIn()"></top-navigation>-->
-    <div class="body-section" ng-controller="LeftNavCtrl" ng-if="activeTab === 'reports'">
+    <div class="body-section" ng-controller="LeftNavCtrl" ng-if="subTab === 'ERP'">
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12">
                 <div class="col-sm-2 col-xs-12 left-nav" ng-if="isLoggedIn()">
-                    <left-menu label="Reports" ui-sref="reports"></left-menu>
-                   <!-- <left-menu label="Accounts" ng-if="canEditAccounts()"></left-menu>-->
+                    <left-menu label="Reports" ui-sref="revenueByVehicles"></left-menu>
+                    <left-menu label="Accounts" ng-if="canEditAccounts()"></left-menu>
                     <left-menu label="Trucks" ui-sref="trucks"></left-menu>
                     <left-menu label="Drivers" ui-sref="drivers"></left-menu>
                     <left-menu label="Parties" ui-sref="parties"></left-menu>
@@ -99,7 +101,8 @@
         </div>
     </div>
 </div>
-    <div ng-if="activeTab != 'reports'" style="height: 100%;">
+    <div ng-if="subTab!= 'ERP'" style="height: 100%;">
+
                      <ui-view></ui-view>
                  </div>
 
@@ -117,10 +120,10 @@
 <script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M"></script>
 <script src="components/sweetalert2/dist/sweetalert2.all.min.js"></script>
-        <script type="text/javascript" src="components/ng-file-upload/ng-file-upload.min.js"></script>
-        <script type="text/javascript" src="components/ng-file-upload/ng-file-upload-shim.min.js"></script>
-        <script type="text/javascript" src="/components/ng-img-crop/compile/unminified/ng-img-crop.js"></script>
-        <!--app-->
+<script type="text/javascript" src="components/ng-file-upload/ng-file-upload.min.js"></script>
+<script type="text/javascript" src="components/ng-file-upload/ng-file-upload-shim.min.js"></script>
+<script type="text/javascript" src="/components/ng-img-crop/compile/unminified/ng-img-crop.js"></script>
+<!--app-->
 <script src="js/app.js"></script>
 
 <!--services-->
