--- a/client/views/partials/accounts/accountsList.html
+++ b/client/views/partials/accounts/accountsList.html
@@ -1,53 +1,60 @@
-
-        <div class="main-right col-xs-12" ng-controller="ShowAccountsCtrl">
-
-            <h3>Accounts</h3>
-            <div class="col-xs-12 pall-zero mt-10">
-                <div class="col-xs-8 pall-zero">
-                    <div class="input-group stylish-input-group col-xs-6">
-                        <input type="text" class="form-control"  placeholder="Search" ng-model="filter" ng-click="findAccounts()" >
-                        <span class="input-group-addon">
-                        <button type="submit" ng-click="findAccounts()">
-                            <span class="glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
-                    </div>
-                </div>
-                <div class="col-xs-4 pall-zero">
-                    <button class="btn btn-blue pull-right mb-10" ng-click="goToEditAccountPage()">Add Account</button>
+<div class="main-right col-xs-12" ng-controller="ShowAccountsCtrl">
+    <div class="col-xs-12 pall-zero mb-10">
+        <div class="col-sm-3 pall-zero"><h3>Accounts</h3></div>
+        <div class="col-xs-8 col-xs-push-1 pall-zero">
+            <div class="col-sm-8">
+                <div class="input-group stylish-input-group">
+                    <input type="text" class="form-control" ng-model="filter" placeholder="Search"
+                           ng-click="findAccounts()">
+                    <span class="input-group-addon">
+                    <button type="button" ng-click="findAccounts()">
+                            <i class="fa fa-search sear" aria-hidden="true"></i>
+                    </button>
+                </span>
                 </div>
             </div>
-
-            <table class="table table-bordered tiv>
--striped table-condensed table-hover" ng-table="accountParams">
-                <tr ng-repeat="account in currentPageOfAccounts" style="text-align: center;">
-
-                    <td data-title="'Username'" sortable="'userName'" class="clickable-item col-sm-2">{{account.userName}}
-                    </td>
-                    <td data-title="'password'" sortable="'password'" class="clickable-item col-sm-2">{{account.password }}
-                    </td>
-                    <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item col-sm-2">{{account.contactPhone }}
-                    </td>
-                    <td data-title="'ERP Status'" sortable="'erpEnabled'" class="clickable-item col-sm-2">{{account.erpEnabled }}
-                    </td>
-                    <td data-title="'GPS Status'" sortable="'gpsEnabled'" class="clickable-item col-sm-2">{{account.gpsEnabled }}
-                    </td>
-                    <td data-title="'Status'" sortable="'isActive'" class="clickable-item col-sm-1">{{account.isActive }}
-                    </td>
-
-                    <td data-title="'Created By'" sortable="'createdByName'"
-                        class="clickable-item col-sm-1">{{ account.attrs.createdByName }}
-                    </td>
-                    <td data-title="'Action'" class="col-sm-2">
-                        <a href="#" class="btn" ng-click="goToEditAccountPage(account._id)">
-                            <span class="glyphicon glyphicon-pencil"></span></a>
-                    </td>
-                </tr>
-                <tr ng-if="!currentPageOfAccounts || currentPageOfAccounts.length === 0">
-                    <td colspan="8">No account Records exist.</td>
-                </tr>
-            </table>
-
         </div>
     </div>
+
+    <table class="table table-bordered tiv>
+-striped table-condensed table-hover" ng-table="accountParams">
+        <tr ng-repeat="account in currentPageOfAccounts" style="text-align: center;">
+
+            <td data-title="'Username'" sortable="'userName'" class="clickable-item col-sm-2">{{account.userName}}
+            </td>
+            <td data-title="'password'" sortable="'password'" class="clickable-item col-sm-2">{{account.password }}
+            </td>
+            <td data-title="'Mobile'" sortable="'contactPhone'" class="clickable-item col-sm-2">{{account.contactPhone
+                }}
+            </td>
+            <td data-title="'ERP Status'" sortable="'erpEnabled'" class="clickable-item col-sm-2">{{account.erpEnabled
+                }}
+            </td>
+            <td data-title="'GPS Status'" sortable="'gpsEnabled'" class="clickable-item col-sm-2">{{account.gpsEnabled
+                }}
+            </td>
+            <td data-title="'Status'" sortable="'isActive'" class="clickable-item col-sm-1">{{account.isActive }}
+            </td>
+
+            <td data-title="'Created By'" sortable="'createdByName'"
+                class="clickable-item col-sm-1">{{ account.attrs.createdByName }}
+            </td>
+            <td data-title="'Action'" class="col-sm-2">
+                <a href="#" class="btn" ng-click="goToEditAccountPage(account._id)">
+                    <span class="glyphicon glyphicon-pencil"></span></a>
+            </td>
+        </tr>
+        <tr ng-if="!currentPageOfAccounts || currentPageOfAccounts.length === 0">
+            <td colspan="8">No account Records exist.</td>
+        </tr>
+    </table>
+
+
+    <div class="add-image pull-right">
+        <figure>
+            <a href="#" ng-click="goToEditAccountPage()">
+                <img src="images/Add_Expenses.png" alt="Add Expenses"  title="Add Expenses"></a>
+        </figure>
+    </div>
 </div>
+
