--- a/client/views/partials/reports/receivableByPartyName.html
+++ b/client/views/partials/reports/receivableByPartyName.html
@@ -1,15 +1,15 @@
-<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="loggedInName();">
+<div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getAmountsBypartyId()">
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel" ng-click="vehicleRevenue()" ng-class="{'activated':activated==='0'}">
+        <div class="reports-panel" ng-click="vehicleRevenue()" ui-sref="reports">
             <div class="reports-image">
                 <figure>
                     <img src="images/revenue-report.png">
                 </figure>
             </div>
             <div class="reports-text">
-                <h3 ng-class="{'h3activated':activated==='0'}">Revenue</h3>
+                <h3>Revenue</h3>
                 <p>From All Vehicles</p>
-                <small ng-class="{'costactivated':activated==='0'}"><i class="fa fa-inr"></i>
+                <small><i class="fa fa-inr"></i>
                     {{totals.totalRevenue}}
                 </small>
             </div>
@@ -18,42 +18,41 @@
 
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel" ng-click="vehicleExpenses()" ng-class="{'activated':activated==='2'}">
+        <div class="reports-panel" ng-click="vehicleExpenses()" ui-sref="expenseByVehicles">
             <div class="reports-image">
                 <figure>
                     <img src="images/expenses.png">
                 </figure>
             </div>
             <div class="reports-text">
-                <h3 ng-class="{'h3activated':activated==='2'}">Expenses</h3>
+                <h3>Expenses</h3>
                 <p>From All Vehicles</p>
-                <small ng-class="{'costactivated':activated==='2'}"><i class="fa fa-inr"></i> {{totals.expensesTotal}}
+                <small><i class="fa fa-inr"></i> {{totals.expensesTotal}}
                 </small>
             </div>
         </div>
     </div>
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel payments" ng-class="{'activated':activated==='4'}">
-
+        <div class="reports-panel payments activated">
             <div class="reports-image">
                 <figure>
                     <img src="images/payments.png">
                 </figure>
             </div>
             <div class="reports-text">
-                <h3 ng-class="{'h3activated':activated==='4'}">Payments</h3>
+                <h3>Payments</h3>
                 <p>From All Parties</p>
             </div>
             <div class="col-xs-12 pall-zero">
                 <ul class="list-inline">
-                    <li class="payble" ng-click="paybleByParty()" ng-class="{'liactivated':activated==='7'}">
+                    <li class="payble" ng-click="paybleByParty()" ui-sref="payableByParty">
                         <span class="payable">Payable</span><br>
                         <small><i class="fa fa-inr"></i>
                             {{totals.paybleAmount || 0}}
                         </small>
                     </li>
-                    <li class="payble" ng-click="paymentsReceivable()" ng-class="{'liactivated':activated==='4'}">
+                    <li class="payble activeLi" ng-click="paymentsReceivable()" ui-sref="receivableByParty">
                         <span class="receivable">Receivable</span> <br>
                         <small><i class="fa fa-inr"></i>
                             {{totals.pendingDue || 0}}
@@ -68,7 +67,7 @@
     </div>
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel" ng-click="getTruckExpirs()" ng-class="{'activated':activated==='6'}">
+        <div class="reports-panel" ng-click="getTruckExpirs()" ui-sref="listOfExpireTrucks">
             <div class="col-xs-12 pall-zero">
                 <div class="reports-image">
                     <figure>
@@ -76,11 +75,11 @@
                     </figure>
                 </div>
                 <div class="reports-text">
-                    <h3 ng-class="{'h3activated':activated==='6'}">Expiry Details</h3>
+                    <h3>Expiry Details</h3>
                     <p>From All Vehicles</p>
                 </div>
             </div>
-            <ul class="col-xs-12 list-inline exp-trucks" ng-class="{'costactivated':activated==='6'}">
+            <ul class="col-xs-12 list-inline exp-trucks">
                 <li><a href="#">{{totals.expiring.fitnessExpiryCount}}</a>
                     <small>Fitness</small>
                 </li>
@@ -100,6 +99,44 @@
         </div>
     </div>
 
-    <div class="col-xs-12" ng-include="template"></div>
+
+    <div class="col-xs-12">
+    <div class="main-temp col-xs-12 mt-20">
+            <h3 class="db-title">Payments Receivable - {{partyName}}:</h3>
+            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
+                <tr ng-repeat="amountListByPartyId in results" style="text-align: center;">
+
+                    <td data-title="'Date'" sortable="'date'" class="clickable-item col-sm-2">
+                        {{amountListByPartyId.date | date:'dd-MM-yyyy' }}
+                    </td>
+                    <td data-title="'Trip Id'" sortable="'tripId'" class="clickable-item col-sm-2">
+                        {{ amountListByPartyId.tripId }}
+                    </td>
+                    <td data-title="'Registration No'" sortable="'truckName'" class="clickable-item col-sm-2">
+                        {{ amountListByPartyId.attrs.truckName }}
+
+                    </td>
+
+                    <td data-title="'Freight Amount'" sortable="'freightAmount'" class="clickable-item col-sm-2">
+                        {{ amountListByPartyId.freightAmount }}
+                    </td>
+
+                    <td data-title="'Paid Amount'" sortable="'amount'" class="clickable-item col-sm-2">
+                        {{ amountListByPartyId.amount}}
+                    </td>
+
+                </tr>
+                <tr ng-if="!results || results.length === 0">
+                    <td colspan="8">No Records exist.</td>
+                </tr>
+                <tr class="text-center">
+                    <td colspan="3"><b>Total</b></td>
+                    <td><b>{{amountPaid.totalFreight}}</b></td>
+                    <td><b>{{amountPaid.totalPaid}}</b></td>
+
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
-  
+
