--- a/client/views/partials/reports/receivableByParties.html
+++ b/client/views/partials/reports/receivableByParties.html
@@ -18,7 +18,7 @@
 
 
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel" ng-click="vehicleExpenses()">
+        <div class="reports-panel" ui-sref="expenseByVehicles">
             <div class="reports-image">
                 <figure>
                     <img src="images/expenses.png">
