Erp settings updated

--- a/client/views/partials/settings/reportsSettings.html
+++ b/client/views/partials/settings/reportsSettings.html
@@ -417,7 +417,7 @@
                                 </date-picker>
                             </li>
                             <li class="report-date">
-                                <date-picker ng-model="settings.expiry.toDate" ban-future="'banFutureDate'"
+                                <date-picker ng-model="settings.expiry.toDate" past-present="'pastPresentDate'"
                                              class="'settingsTextfield'"></date-picker>
                             </li>
 
