--- a/client/views/partials/expenses/expensesEdit.html
+++ b/client/views/partials/expenses/expensesEdit.html
@@ -92,6 +92,12 @@
                 </div>
                     <div class="form-group col-xs-12">
                         <div class="col-xs-12 styling-input-list">
+                            <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.totalAmount"/>
+                            <label class="focus-effect-for-input" aria-hidden="true">Total Amount*</label>
+                        </div>
+                    </div>
+                    <div class="form-group col-xs-12">
+                        <div class="col-xs-12 styling-input-list">
                             <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.paidAmount"/>
                             <label class="focus-effect-for-input" aria-hidden="true">Paid Amount*</label>
 
@@ -100,9 +106,9 @@
                 </div>
 
 
-                <div class="form-group col-xs-12">
+                <div class="form-group col-xs-12" ng-show="expenseDetails.mode == 'Cash'">
                     <div class="col-xs-12 styling-input-list">
-                        <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.totalAmount"/>
+                        <input type="number" class="form-control custom-form-control" ng-model="expenseDetails.cost"/>
                         <label class="focus-effect-for-input" aria-hidden="true">Total Amount*</label>
                     </div>
                 </div>
