--- a/client/views/partials/reports/expenseByVehicleId.html
+++ b/client/views/partials/reports/expenseByVehicleId.html
@@ -110,23 +110,22 @@
                         {{listOfExpensesByVehicleId.date | date:'dd-MM-yyyy' }}
                     </td>
                     <td data-title="'Diesel'" sortable="'dieselExpense'" class="clickable-item col-sm-2">
-                        {{ listOfExpensesByVehicleId.attrs.expenseName == 'Diesel' ? listOfExpensesByVehicleId.cost :
+                        {{ listOfExpensesByVehicleId.attrs.expenseName.toLowerCase() == 'diesel' ? listOfExpensesByVehicleId.totalAmount :
                         "0" }}
                     </td>
                     <td data-title="'Toll'" sortable="'tollExpense'" class="clickable-item col-sm-2">
-                        {{ listOfExpensesByVehicleId.attrs.expenseName == 'Toll' ? listOfExpensesByVehicleId.cost : "0"
+                        {{ listOfExpensesByVehicleId.attrs.expenseName.toLowerCase() == 'toll' ? listOfExpensesByVehicleId.totalAmount : "0"
                         }}
 
                     </td>
 
                     <td data-title="'Maintenance'" sortable="'mExpense'" class="clickable-item col-sm-2">
-                        {{ listOfExpensesByVehicleId.attrs.expenseName == 'Maintenance' ? listOfExpensesByVehicleId.cost
+                        {{ listOfExpensesByVehicleId.attrs.expenseName.toLowerCase() == 'maintenance' ? listOfExpensesByVehicleId.totalAmount
                         : "0" }}
                     </td>
 
                     <td data-title="'Miscellaneous'" sortable="'misc'" class="clickable-item col-sm-2">
-                        <a href="#" ng-click="GetExpense(sravan)">
-                        </a>{{GetExpense(listOfExpensesByVehicleId.attrs.expenseName,listOfExpensesByVehicleId.cost)}}</a>
+                      {{GetExpense(listOfExpensesByVehicleId.attrs.expenseName,listOfExpensesByVehicleId.totalAmount)}}
                     </td>
 
                 </tr>
